--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@ technologies and the contemporary trends to satisfy the client’s desire.
                     <div class="row">
                         <div id="carousel-partners" class="carousel col-sm-12">
                             <div class="item wow fadeIn" data-wow-delay=".5s">
-                                <img src="images/partners/01.png" alt="PHU SI">
+                                <img src="images/partners/01.png" alt="PHUSI JSC">
                                 <span class="info"><a href="#">PHU SI</a></span>
                             </div>
                             <div class="item wow fadeIn" data-wow-delay=".75s">
@@ -520,7 +520,7 @@ technologies and the contemporary trends to satisfy the client’s desire.
                                 <span class="info"><a href="#">LAI THIEU</a></span>
                             </div>
                             <div class="item wow fadeIn" data-wow-delay="1.5s">
-                                <img src="images/partners/05.png" alt="LEONGHUP">
+                                <img src="images/partners/05.png" alt="LEONG HUP">
                                 <span class="info"><a href="#">LEONGHUP</a></span>
                             </div>
                             <div class="item wow fadeIn" data-wow-delay="1.75s">
@@ -536,6 +536,10 @@ technologies and the contemporary trends to satisfy the client’s desire.
                                 <span class="info"><a href="#">QL RESOURCE BERHAD</a></span>
                             </div>
                             <div class="item wow fadeIn" data-wow-delay="2.5s">
+                                <img src="images/partners/10.png" alt="EPIC DISIGN">
+                                <span class="info"><a href="#">DE NHAT</a></span>
+                            </div>
+							<div class="item wow fadeIn" data-wow-delay="2.5s">
                                 <img src="images/partners/09.png" alt="DE NHAT">
                                 <span class="info"><a href="#">DE NHAT</a></span>
                             </div>
