--- a/index.html
+++ b/index.html
@@ -536,8 +536,8 @@ technologies and the contemporary trends to satisfy the client’s desire.
                                 <span class="info"><a href="#">QL RESOURCE BERHAD</a></span>
                             </div>
                             <div class="item wow fadeIn" data-wow-delay="2.5s">
-                                <img src="images/partners/10.png" alt="EPIC DISIGN">
-                                <span class="info"><a href="#">DE NHAT</a></span>
+                                <img src="images/partners/10.png" alt="EPIC DESIGN">
+                                <span class="info"><a href="#">EPIC DESIGN</a></span>
                             </div>
 							<div class="item wow fadeIn" data-wow-delay="2.5s">
                                 <img src="images/partners/09.png" alt="DE NHAT">
