--- a/projects.html
+++ b/projects.html
@@ -278,7 +278,19 @@
                                 </div>
                             </div>
 							
-                            <div class="portfolio-item farmhat other">
+							<div class="portfolio-item buildingof">
+                                <div class="portfoio-item-wrapper">
+                                    <img class="portfolio-img" src="images/portfolio/CP Hue.jpg" alt="img">
+                                    <div class="portfolio-info">
+                                        <div class="portfolio-info-wrap">
+                                            <h3 class="portfolio-title"><a href="#">CP Hue Shrimp Factory</a></h3>
+                                            <!--div class="portfolio-tags"><a href="#">Joomla</a>, <a href="#">Corporate</a>, <a href="#">Magazine</a> </div-->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            
+							<div class="portfolio-item farmhat other">
                                 <div class="portfoio-item-wrapper">
                                     <img class="portfolio-img" src="images/portfolio/TH DN.jpg" alt="img">
                                     <div class="portfolio-info">
