--- a/index.html
+++ b/index.html
@@ -276,6 +276,14 @@
                                   </div>
                               </div>
                           </div>
+						  <div class="item">
+                              <div class="slideshow-fullwidth-item-bg" style="background-image: url(images/slider/slide16.jpg);">
+                                  <div class="container">
+                                      <div class="slideshow-fullwidth-item-text">
+                                          </div>
+                                  </div>
+                              </div>
+                          </div>
                       </div> <!-- //slide-fullwidth -->
 
                       <div class="customNavigation">
